force-app/main/default/objects/bpats__ASM_Candidate_Mapping__mdt/bpats__ASM_Candidate_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ASM Candidate Mapping</label>
    <pluralLabel>ASM Candidate Mappings</pluralLabel>
</CustomObject>