force-app/main/default/objects/bpats__ASM_Candidate_Mapping__mdt/fields/bpats__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Field_Type__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>