force-app/main/default/objects/bpats__ASM_Candidate_Mapping__mdt/fields/bpats__Sync_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Sync_Field_Api_Name__c</fullName>
    <label>Sync Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>